# TiltedbackendPy

./: README.md  pyproject.toml
backend/: crud.py  database.py  main.py  models.py  schemas.py
miniapp/: main.py  nohup.out
miniapp/app/: database.py  models.py  schemas.py
miniapp/main/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
miniapp/main/migrations/: 0001_initial.py  0002_rename_description_task_task_description_and_more.py  0002_task_task_url_user_avatar_alter_user_referral_code.py  0003_remove_user_password_alter_user_groups_and_more.py  0003_task_points.py  0004_remove_user_email_remove_user_first_name_and_more.py  0005_globaltask_usertaskstatus_delete_task.py  0006_globaltask_task_url_alter_usertaskstatus_user.py  0007_user_friends.py
miniapp/miniapp/: settings.py  urls.py
