[tool.poetry]
name = "tiltedbackendpy"
version = "0.1.0"
description = ""
authors = ["Ega2901"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
mysqlclient = "^2.2.4"
sqlalchemy = "^2.0.31"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
