[tool.poetry]
name = "tiltedfastapi"
version = "0.1.0"
description = ""
authors = ["Ega2901"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
